# scatterpub-toolchain

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  lefthook.yml  pyproject.toml
.claude/skills/copyeditor/: SKILL.md
.claude/skills/copyeditor/assets/: review-template.html
.claude/skills/copyeditor/scripts/: extract-vellum.py
scripts/: clean-ocr.py  clean-vellum.py  extract-vellum.py  md-to-docx.py  ocr-to-markdown.py
